# SoftwareEngineering

Lab1/: lab1_a.uml  lab1_b.uml
Lab2/: Jamnik.cpp  Jamnik.h  Pies.cpp  Pies.h  Ssak.cpp  Ssak.h  lab2._ml  lab2.uml  test.cpp
Lab3/: a
Lab3/Lab3a/: Student.cpp  Student.h  Zeszyt.cpp  lb3_a.uml  lb3_a.~ml  test.cpp
Lab3/Lab3b/: Autor.cpp  Autor.h  Ksiazka.cpp  Ksiazka.h  Zeszyt.h  lab3.~ml  lab3b.uml  lab3b.~ml  main.cpp  test.cpp
Lab3/Lab3c/: Biblioteka.cpp  Biblioteka.h  Ksiazka.cpp  (+4 more)
lab13/: CMakeLists.txt  Client.h  IDeviceFactory.cpp  IDeviceFactory.h  ILaptopDevice.h  IPCDevice.cpp  IPCDevice.h  THHDDeviceFactory.cpp  THHDDeviceFactory.h  TLaptopHDDDevice.cpp  TLaptopHDDDevice.h  TLaptopSSDDevice.cpp  TLaptopSSDDevice.h  TPCHDDevice.cpp  TPCHDDevice.h  TPCSSDDevice.cpp  TPCSSDDevice.h  TSSDDeviceFactory.cpp  TSSDDeviceFactory.h  lab13.uml  lab13.~ml  main.cpp
lab14/: CMakeLists.txt  Dolar.cpp  Dolar.h  Euro.cpp  Euro.h  Frank.cpp  Frank.h  Jen.cpp  Jen.h  NaliczanieOprocentowania.cpp  NaliczanieOprocentowania.h  Strategia.cpp  Strategia.h  lab14.uml  main.cpp
lab15/: CheesePizza.cpp  CheesePizza.h  HawaiiPizza.cpp  HawaiiPizza.h  Pizza.cpp  Pizza.h  PizzaFactory.cpp  PizzaFactory.h  PizzaType.h  lab15.uml  lab15.~ml
lab2/: Jamnik.cpp  Jamnik.h  Pies.cpp  Pies.h  Ssak.h
lab7/: Potega.cpp  Potega.h  Prawdopodobienstwo.cpp  Prawdopodobienstwo.h  Silnia.cpp  Silnia.h  SymbolNewtona.cpp  SymbolNewtona.h  lab7.uml  lab7.~ml  main.cpp  potega.cpp  potega.h  prawdopodobienstwo.cpp  prawdopodobienstwo.h  silnia.cpp  silnia.h  symbolNewtona.cpp  symbolNewtona.h
(+41 files in other folders)
