cmake_minimum_required(VERSION 3.26)
project(lab14)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab14 main.cpp
Dolar.cpp
Dolar.h
Euro.cpp
Euro.h
Frank.cpp
Frank.h
        Jen.cpp
        Jen.h
        NaliczanieOprocentowania.cpp
        NaliczanieOprocentowania.h
        Strategia.cpp
        Strategia.h)
